--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-myenv/
-venv/
+virtual/
+
+# workspace VSCODE
+ws_poll.code-workspace 
+.vscode/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -59,6 +62,7 @@ coverage.xml
 *.pot
 
 # Django stuff:
+*migrations/
 *.log
 local_settings.py
 db.sqlite3
