--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
-myenv/
-venv/
-.idea/
+virtual/
+
+# workspace VSCODE
+ws_poll.code-workspace 
 .vscode/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -60,6 +62,7 @@ coverage.xml
 *.pot
 
 # Django stuff:
+*migrations/
 *.log
 local_settings.py
 db.sqlite3
